# llvm_playground

./: .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
sample/: example2.k
src/app/: CMakeLists.txt  codegen.cpp  kaleidoscope.cpp
src/codegen/: CMakeLists.txt  codegen.cpp  codegen.h
src/lexer/: CMakeLists.txt  lexer.cpp  lexer.h
src/parser/: CMakeLists.txt  parser.cpp  parser.h
src/util/: CMakeLists.txt
test/: CMakeLists.txt
