# Unit tests
set(TEST_SOURCES
    # Add test source files here when they exist
)

if(TEST_SOURCES)
    # Example test executable (uncomment and modify when test files exist)
    # add_executable(llvm_playground_tests ${TEST_SOURCES})
    # target_link_libraries(llvm_playground_tests ${llvm_libs} ${GTEST_LIBRARIES} ${GTEST_MAIN_LIBRARIES})
    # if(TARGET util)
    #     target_link_libraries(llvm_playground_tests util)
    # endif()
    # if(TARGET lexer)
    #     target_link_libraries(llvm_playground_tests lexer)
    # endif()
    # if(TARGET parser)
    #     target_link_libraries(llvm_playground_tests parser)
    # endif()
    # if(TARGET codegen)
    #     target_link_libraries(llvm_playground_tests codegen)
    # endif()
    # 
    # # Add the test to ctest
    # add_test(NAME unit_tests COMMAND llvm_playground_tests)
endif()