# Application executables
set(APP_SOURCES
    # Add source files here when they exist
)

if(APP_SOURCES)
    # Example executable (uncomment and modify when source files exist)
    # add_executable(llvm_playground_app ${APP_SOURCES})
    # target_link_libraries(llvm_playground_app ${llvm_libs} ${Boost_LIBRARIES})
    # if(TARGET util)
    #     target_link_libraries(llvm_playground_app util)
    # endif()
    # if(TARGET lexer)
    #     target_link_libraries(llvm_playground_app lexer)
    # endif()
    # if(TARGET parser)
    #     target_link_libraries(llvm_playground_app parser)
    # endif()
    # if(TARGET codegen)
    #     target_link_libraries(llvm_playground_app codegen)
    # endif()
endif()